--- a/app/src/main/res/layout/schedulercard.xml
+++ b/app/src/main/res/layout/schedulercard.xml
@@ -35,6 +35,7 @@
                 android:text="@string/packers"
                 android:textSize="24sp"
                 android:textStyle="bold"
+                android:gravity="center"
                 android:id="@+id/home_team_name">
                 
             </TextView>
@@ -46,6 +47,7 @@
                 android:layout_alignParentEnd="true"
                 android:padding="16dp"
                 android:textSize="24sp"
+                android:gravity="center"
                 android:textStyle="bold">
                 
             </TextView>
@@ -127,6 +129,17 @@
                 android:padding="16dp"
                 android:layout_alignParentStart="true"
                 android:id="@+id/time_of_play">
+            </TextView>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="14sp"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/linear_layout"
+                android:padding="8dp"
+                android:id="@+id/week">
+
             </TextView>
 
             <TextView
