--- a/app/src/main/res/layout/schedulercard.xml
+++ b/app/src/main/res/layout/schedulercard.xml
@@ -6,7 +6,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="200dp"
         android:layout_margin="25dp"
         app:cardCornerRadius="10dp"
         app:cardMaxElevation="10dp">
@@ -55,9 +55,9 @@
             <LinearLayout
                 android:id="@+id/linear_layout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_below="@+id/home_team_name"
-                android:layout_marginBottom="30dp"
+                android:layout_marginBottom="10dp"
                 android:orientation="horizontal"
                 android:weightSum="10">
 
@@ -120,39 +120,48 @@
 
             </LinearLayout>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="14sp"
-                android:textStyle="bold"
-                android:layout_below="@id/linear_layout"
-                android:padding="16dp"
-                android:layout_alignParentStart="true"
-                android:id="@+id/time_of_play">
-            </TextView>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="14sp"
-                android:layout_centerHorizontal="true"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_below="@+id/linear_layout"
-                android:padding="8dp"
-                android:id="@+id/week">
+                android:orientation="horizontal"
+                android:weightSum="9">
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    android:textStyle="bold"
+                    android:padding="16dp"
+                    android:gravity="center"
+                    android:layout_weight="3"
+                    android:id="@+id/time_of_play">
+                </TextView>
 
-            </TextView>
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    android:padding="8dp"
+                    android:gravity="center"
+                    android:layout_weight="3"
+                    android:id="@+id/week">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="14sp"
-                android:textStyle="bold"
-                android:layout_alignParentEnd="true"
-                android:layout_below="@id/linear_layout"
-                android:padding="16dp"
-                android:id="@+id/state_of_play">
+                </TextView>
 
-            </TextView>
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    android:textStyle="bold"
+                    android:padding="16dp"
+                    android:gravity="center"
+                    android:layout_weight="3"
+                    android:id="@+id/state_of_play">
+
+                </TextView>
+
+            </LinearLayout>
+
 
 
         
