--- a/app/src/main/res/layout/schedulercard.xml
+++ b/app/src/main/res/layout/schedulercard.xml
@@ -7,7 +7,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_margin="25dp"
+        android:layout_marginTop="5dp"
         app:cardCornerRadius="10dp"
         app:cardMaxElevation="10dp">
 
@@ -18,6 +18,7 @@
             android:gravity="center"
             android:textStyle="bold"
             android:textSize="40sp"
+            android:textColor="@color/gray"
             android:text="@string/bye"
             android:id="@+id/bye"/>
 
@@ -32,7 +33,6 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:padding="16dp"
-                android:text="@string/packers"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 android:gravity="center"
@@ -65,7 +65,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:padding="8dp"
-                    android:textSize="32sp"
+                    android:textSize="32dp"
                     android:layout_marginStart="8dp"
                     android:textStyle="bold"
                     android:layout_weight="2"
@@ -75,8 +75,8 @@
                 </TextView>
                 
                 <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
                     android:layout_weight="1"
                     android:layout_gravity="center_vertical"
                     android:id="@+id/home_team_logo">
@@ -86,7 +86,6 @@
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="@string/v"
                     android:gravity="center"
                     android:textSize="14sp"
                     android:textStyle="bold"
@@ -97,8 +96,8 @@
                 </TextView>
 
                 <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
                     android:layout_weight="1"
                     android:layout_gravity="center_vertical"
                     android:id="@+id/away_team_logo">
@@ -109,10 +108,11 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:padding="8dp"
-                    android:textSize="32sp"
+                    android:textSize="32dp"
                     android:layout_marginEnd="8dp"
                     android:textStyle="bold"
                     android:layout_weight="2"
+                    android:gravity="right"
                     android:layout_gravity="center_vertical"
                     android:id="@+id/away_team_score">
                 </TextView>
@@ -131,7 +131,7 @@
                     android:textSize="14sp"
                     android:textStyle="bold"
                     android:padding="16dp"
-                    android:gravity="center"
+                    android:gravity="left"
                     android:layout_weight="3"
                     android:id="@+id/time_of_play">
                 </TextView>
@@ -142,6 +142,7 @@
                     android:textSize="14sp"
                     android:padding="8dp"
                     android:gravity="center"
+                    android:textColor="@color/gray"
                     android:layout_weight="3"
                     android:id="@+id/week">
 
@@ -153,7 +154,7 @@
                     android:textSize="14sp"
                     android:textStyle="bold"
                     android:padding="16dp"
-                    android:gravity="center"
+                    android:gravity="right"
                     android:layout_weight="3"
                     android:id="@+id/state_of_play">
 
