--- a/app/src/main/res/layout/schedulercard.xml
+++ b/app/src/main/res/layout/schedulercard.xml
@@ -31,7 +31,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
-                android:padding="16dp"
+                android:padding="@dimen/home_team_name_padding"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 android:gravity="center"
